--- a/package.json
+++ b/package.json
@@ -1,26 +1,14 @@
 {
   "private": true,
+  "type": "module",
   "dependencies": {
     "phaser": "^3.54.0",
-    "prettier": "^2.2.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.7.2",
-    "@babel/preset-env": "^7.7.1",
-    "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^3.0.0",
-    "file-loader": "^4.2.0",
-    "html-webpack-plugin": "^3.2.0",
-    "raw-loader": "^3.1.0",
-    "terser-webpack-plugin": "^4.2.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.9.0",
-    "webpack-merge": "^4.2.2"
+    "prettier": "^2.2.1",
+    "vite": "^2.3.3"
   },
   "scripts": {
-    "build": "webpack --config webpack/prod.js ",
-    "start": "webpack-dev-server --config webpack/base.js --open"
+    "build": "vite build",
+    "dev": "vite"
   },
   "prettier": {
     "singleQuote": true
